statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-world-statefulset
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 2 # by default is 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      terminationGracePeriodSeconds: 10 # 강제 종료까지 대기하는 시간
      containers:
      - name: hell-world
        image: kkw01234/k8s-test-node-server:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: web
