service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-nodeport
spec:
  ports:
  - name: web-port
    port: 80
    targetPort: 3000
    nodePort: 32222
  selector:
    app: example-pod-label
  type: NodePort
