service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  ports:
  - name: web-port
    port: 80
    targetPort: 80
  selector:
    app: example-pod-label
  type: ClusterIP

  # ---
  # apiVersion: v1
  # kind: Service
  # metadata:
  #   name: hostname-svc-lb
  # spec: 
  #   ports:
  #   - name: web-port
  #     port: 80
  #     targetPort: 80
  #   selector:
  #     app: webserver
  #   type: LoadBalancer
