ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - kkw.sample.com
  rules:
    - host: v1.exampe.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80
    - host: v1.exampe.127.0.0.1.sslip.io
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
